load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library")
load("//tools/base/build-system/integration-test/connected:connected-test.bzl", "gradle_connected_test")
load("//tools/base/bazel/avd:avd.bzl", "avd")

kotlin_library(
    name = "connected",
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/java/**/*.java",
    ]),
    #keep sorted
    deps = [
        "//tools/base/bazel/avd:emulator_rule",
        "//tools/base/testutils:tools.testutils",
        "@maven//:junit.junit",
    ],
)

#keep sorted
TEST_DEPS = [
    ":connected",
    "//tools/analytics-library/protos/src/main/proto",
    "//tools/apksig",
    "//tools/apkzlib",
    "//tools/base/annotations",
    "//tools/base/bazel/avd:emulator_rule",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/build-system/integration-test/framework/src/main/proto",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.testlib",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "//tools/base/utp/android-test-plugin-host-device-info-proto",
    "//tools/base/zipflinger",
    "@maven//:com.google.guava.guava",
    "@maven//:com.google.protobuf.protobuf-java",
    "@maven//:com.google.protobuf.protobuf-java-util",
    "@maven//:com.google.truth.extensions.truth-java8-extension",
    "@maven//:com.google.truth.truth",
    "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8",
    "@maven//:org.jetbrains.kotlin.kotlin-test",
]

avd(name = "avd")

#keep sorted
TEST_DATA = [
    ":avd",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platform-tools",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/aapt2:aapt2_for_tests",
    "//tools/base/build-system/integration-test:android_platform_for_tests",
]

#keep sorted
MAVEN_REPO_ZIPS = [
    "//tools/base/build-system:android_gradle_plugin",
]

#keep sorted
TEST_MAVEN_REPOS = [
    "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
    "//tools/base/build-system/integration-test:androidx_latest",
    "//tools/base/build-system/integration-test:androidx_test_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:utp_plugins",
    "//tools/base/build-system/integration-test/connected:prebuilts",
]

gradle_connected_test(
    name = "AdditionalTestOutputConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutput"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AdditionalTestOutputOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutputOverride"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AndroidTestResourcesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AnnotationProcessorConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApiConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/api"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApplibtestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/applibtest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AttrOrderConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/attrOrder"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "BasicConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/basic"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CmakeJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ComposeHelloWorldConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/composeHelloWorld"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_1_4_32_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CoreLibraryDesugarConversionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CustomTestedApksTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "D8DesugaringConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingExternalArtifactDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS + [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingIntegrationTestAppsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS + [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DensitySplitConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/densitySplit"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DependenciesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/dependencies"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DynamicFeatureConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/feature/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavored"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavoredlib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavorlib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavors"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JacocoConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JarsInLibrariesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/assets"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "KotlinAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/kotlinApp"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyJarDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyJarDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyLibDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyLibDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibsTestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libsTest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibTestDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libTestDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MigratedConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/migrated"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minify"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minifyLib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MlModelBindingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + [
        "//tools/base/build-system/integration-test:test-projects/mlModelBinding",
        "//prebuilts/tools/common/mlkit/testData",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDex"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexWithLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDexWithLib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiProjectConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiproject"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiresConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multires"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkConnectedCheckTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkLibPrebuiltsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkLibPrebuilts",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkSanAngelesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkSanAngeles",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NoSplitNdkVariantsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay1ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay1"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay2ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay2"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay3ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay3"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "PkgOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/pkgOverride"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "RenderscriptNdkConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/renderscriptNdk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ResValueTypeConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ShardingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/appWithTests"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SameNamedLibsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/sameNamedLibs"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleWithMinifiedAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModuleWithMinifiedApp"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithAarDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithMinificationButNoObfuscationConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestWithMinificationButNoObfuscation"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SigningConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestingSupportLibraryConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestWithSameDepAsAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/dependencies/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "UtpConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + [
        "//tools/adt/idea/utp:addGradleAndroidTestListener",
        "//tools/base/build-system/integration-test:test-projects/utp",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS + [
        "//tools/base/build-system/integration-test/utp",
    ],
)

gradle_connected_test(
    name = "FailureRetentionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/failureRetention"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

# Maven repo with all the dependencies required by test projects.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e "s# *> Could not find \(.*\)\.#\1#"
#   | sed -e 's#\(.*\):\(.*\):\(.*\)#"@maven//:\1.\2_\3",#'
#   | sort | uniq
maven_repository(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:androidx.activity.activity-compose_1.3.1",
        "@maven//:androidx.appcompat.appcompat_1.1.0",
        "@maven//:androidx.appcompat.appcompat_1.2.0",
        "@maven//:androidx.appcompat.appcompat_1.3.0-beta01",
        "@maven//:androidx.compose.compiler.compiler_1.2.0-alpha05",
        "@maven//:androidx.compose.material.material_1.2.0-alpha05",
        "@maven//:androidx.compose.ui.ui-tooling_1.2.0-alpha05",
        "@maven//:androidx.core.core-ktx_1.1.0",
        "@maven//:androidx.lifecycle.lifecycle-livedata-ktx_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-viewmodel-ktx_2.4.0",
        "@maven//:androidx.test.core_1.4.0-alpha06",
        "@maven//:androidx.test.espresso.espresso-core_3.2.0",
        "@maven//:androidx.test.ext.junit_1.1.1",
        "@maven//:androidx.test.ext.junit_1.1.3-alpha02",
        "@maven//:androidx.test.orchestrator_1.4.0-alpha06",
        "@maven//:androidx.test.rules_1.1.0",
        "@maven//:androidx.test.rules_1.4.0-alpha06",
        "@maven//:androidx.test.runner_1.4.0-alpha06",
        "@maven//:com.android.support.multidex-instrumentation_1.0.2",
        "@maven//:com.android.support.multidex_1.0.2",
        "@maven//:com.android.tools.desugar_jdk_libs_1.1.5",
        "@maven//:com.google.android.gms.play-services-base_15.0.1",
        "@maven//:com.google.code.findbugs.jsr305_1.3.9",
        "@maven//:com.google.guava.guava_19.0",
        "@maven//:org.hamcrest.hamcrest-library_1.3",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-android_1.4.1",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core-common_1.3.6",
        "@maven//:org.tensorflow.tensorflow-lite-metadata_0.1.0",
        "@maven//:org.tensorflow.tensorflow-lite-support_0.1.0",
    ],
    visibility = ["__subpackages__"],
)

# Maven repo with all the dependencies required by databinding tests.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
# grep -F '> Could not find' test.log \
#   | sed -e "s# *> Could not find \(.*\)\.#\1#"
#   | sed -e 's#\(.*\):\(.*\):\(.*\)#"@maven//:\1.\2_\3",#'
#   | sort | uniq
maven_repository(
    name = "databinding_prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:android.arch.lifecycle.runtime_1.0.3",
        "@maven//:androidx.appcompat.appcompat_1.0.2",
        "@maven//:androidx.cardview.cardview_1.0.0",
        "@maven//:androidx.lifecycle.lifecycle-extensions_2.2.0",
        "@maven//:androidx.lifecycle.lifecycle-livedata-ktx_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-livedata_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-process_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime-ktx_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-service_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-viewmodel_2.4.0",
        "@maven//:androidx.test.espresso.espresso-core_3.1.0",
        "@maven//:com.android.support.appcompat-v7_26.1.0",
        "@maven//:com.android.support.test.espresso.espresso-core_3.0.1",
        "@maven//:com.android.support.test.runner_1.0.1",
    ],
    visibility = ["__subpackages__"],
)
